ajout affichage prétraité

--- a/production/index.html
+++ b/production/index.html
@@ -25,8 +25,13 @@
         </div>
         <div id="options-list">
             <div class="param">
-                <label for="checkbox-affichage">Affichage</label>
+                <label for="checkbox-affichage">Affichage Dessins</label>
                 <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage" checked/>
+            </div>
+
+            <div class="param">
+                <label for="checkbox-image-pretraitee">Image prétraitée</label>
+                <input type="checkbox" id="checkbox-image-pretraitee" class="input-checkbox" name="affichage-pretraitee"/>
             </div>
 
             <select name="robots" id="select-robot-sim" class="select-top-table-container displayNone">
