--- a/production/index.html
+++ b/production/index.html
@@ -31,7 +31,8 @@
 
             <div class="param">
                 <label for="checkbox-image-pretraitee">Image prétraitée</label>
-                <input type="checkbox" id="checkbox-image-pretraitee" class="input-checkbox" name="affichage-pretraitee"/>
+                <input type="checkbox" id="checkbox-image-pretraitee" class="input-checkbox"
+                       name="affichage-pretraitee"/>
             </div>
 
             <select name="robots" id="select-robot-sim" class="select-top-table-container displayNone">
@@ -79,7 +80,7 @@
                 <option value="Foot" class="option">Foot</option>
                 <option value="Facile" class="option">Facile</option>
             </select>
-            
+
             <select name="robots" id="select-robot" class="select-top-table-container displayFlex">
                 <!-- here some robots which are available to control (added with javascript) -->
                 <option value="default" class="option" selected>Broadcast</option>
@@ -100,8 +101,7 @@
     <!-- Right part which contains different views (one or more) -->
     <!-- Mobile Interface -->
     <div class="part displayNone" id="right-part-mobile">
-        <input type="range" class="cursor-motor" id="cursor-direction-motor-mobile" min="-128" max="128">
-        <input type="range" class="cursor-motor" id="cursor-speed-motor-mobile" min="-255" max="255">
+        <div id="mobile-joystick" style="width:300px;height:300px;margin-bottom:20px;"></div>
     </div>
 
     <div class="part displayFlex" id="right-part">
@@ -164,9 +164,11 @@
     </p>
 </footer>
 
+<script async src="./lib/openCV.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="./lib/matter_0.17.0.js"></script>
-<script async src="./lib/openCV.js" type="text/javascript"></script>
+<script src="./lib/joy.js"></script>
+
 <script type="module" src="./js/video/video.js"></script>
 <script type="module" src="./js/index.js"></script>
 </body>
