FONCTIONNALITE : début du scénario de collaboration

--- a/production/index.html
+++ b/production/index.html
@@ -149,7 +149,7 @@
                     <option value="default" class="option">Test</option>
                     <option value="SimpleBillard" class="option">Billard Simple</option>
                     <option value="ComplexBillard" class="option">Billard Complexe</option>
-                    <option value="DuelBillard" class="option">Billard Duel</option>
+                    <option value="CollaborationBillard" class="option">Billard Collaboration</option>
                 </select>
             </div>
         </div>
