FIX + DOCUMENT : fix du bug quand aucun robot n'est disponible + document bilan d'itération

--- a/production/index.html
+++ b/production/index.html
@@ -82,8 +82,7 @@
             </select>
 
             <select name="robots" id="select-robot" class="select-top-table-container displayFlex">
-                <!-- here some robots which are available to control (added with javascript) -->
-                <option value="default" class="option" selected>Broadcast</option>
+                <option value="default" class="option" selected>Aucun robot disponible</option>
             </select>
 
             <button id="btn-options" class="param">Options supplémentaires</button>
