FONCTIONNALITE : ajout d'un bouton pour afficher ou non la vision anti collision des robots

--- a/production/index.html
+++ b/production/index.html
@@ -52,6 +52,11 @@
                        oninput="this.nextElementSibling.value = this.value">
                 <output>1</output>
             </div>
+
+            <div class="param">
+                <label for="checkbox-vision-anti-collision">Vision Anti-collision</label>
+                <input type="checkbox" id="checkbox-vision-anti-collision" class="input-checkbox" name="affichage"/>
+            </div>
         </div>
     </div>
 </div>
