FONCTIONNALITE : Gestion améliorée des options d'affichages

--- a/production/index.html
+++ b/production/index.html
@@ -24,7 +24,7 @@
             <img src="./img/croix.png" alt="croix de fermeture" id="croix">
         </div>
         <div id="options-list">
-            <div class="param">
+            <div class="param" id="container-affichage-dessins">
                 <label for="checkbox-affichage">Affichage Dessins</label>
                 <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage" checked/>
             </div>
@@ -53,7 +53,7 @@
                 <output>1</output>
             </div>
 
-            <div class="param">
+            <div class="param displayFlex" id="container-vision-anti-collision">
                 <label for="checkbox-vision-anti-collision">Vision Anti-collision</label>
                 <input type="checkbox" id="checkbox-vision-anti-collision" class="input-checkbox" name="affichage"/>
             </div>
@@ -161,7 +161,9 @@
 </main>
 
 <footer>
-    <p>Projet réalisé par
+    <p>
+        <a href="https://github.com/Akip2/RobotBillard" target="_blank">Projet</a>
+        réalisé par
         <a href="https://github.com/Akip2" target="_blank">Antoine FONTANEZ</a>,
         <a href="https://github.com/Corentin-Froger" target="_blank">Corentin FROGER</a> et
         <a href="https://github.com/Ratz123323" target="_blank">Nathan PIERROT</a>
