FIX : image prétraitée dans le simulateur

--- a/production/index.html
+++ b/production/index.html
@@ -29,7 +29,7 @@
                 <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage" checked/>
             </div>
 
-            <div class="param">
+            <div class="param displayFlex" id="container-affichage-pretraitee">
                 <label for="checkbox-image-pretraitee">Image prétraitée</label>
                 <input type="checkbox" id="checkbox-image-pretraitee" class="input-checkbox"
                        name="affichage-pretraitee"/>
