FIX : options affichage canvas

--- a/production/index.html
+++ b/production/index.html
@@ -55,7 +55,8 @@
 
             <div class="param displayFlex" id="container-vision-anti-collision">
                 <label for="checkbox-vision-anti-collision">Vision Anti-collision</label>
-                <input type="checkbox" id="checkbox-vision-anti-collision" class="input-checkbox" name="affichage"/>
+                <input type="checkbox" id="checkbox-vision-anti-collision" class="input-checkbox" name="affichage"
+                       checked/>
             </div>
         </div>
     </div>
