FIX : remplacement de toutes les occurences de DUEL par DUO

--- a/production/index.html
+++ b/production/index.html
@@ -81,7 +81,7 @@
             <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
                 <option value="Billard" class="option" selected>Billard</option>
                 <option value="Random" class="option">Random</option>
-                <option value="Duel" class="option">Duel</option>
+                <option value="Duo" class="option">Duo</option>
                 <option value="Filled" class="option">Remplie</option>
                 <option value="Foot" class="option">Foot</option>
                 <option value="Facile" class="option">Facile</option>
